tests/ui/cilk/only_initialized_in_conditionally_spawned_task.stderr
error[E0381]: used binding `y` is possibly-uninitialized
  --> $DIR/only_initialized_in_conditionally_spawned_task.rs:14:5
   |
LL |     let y;
   |         - binding declared here but left uninitialized
LL |     if true {
LL |         cilk_spawn { y = 1; };
   |                      ----- binding initialized here in some conditions
...
LL |     y + 1
   |     ^ `y` used here but it is possibly-uninitialized

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0381`.
